# keycast

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  compose.local.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  keycast-oauth-unified.yaml  package.json  service-deploy.yaml  service.yaml  unified-service-deploy.yaml  unified-service.yaml
.claude/: settings.local.json
.github/workflows/: test.yml
api/: Cargo.toml  openapi.yaml
api/src/: email_service.rs  lib.rs  state.rs
api/tests/: auth_test.rs  authorization_handle_test.rs  integration_test.rs  multi_device_auth_test.rs  nostr_rpc_integration_test.rs  oauth_integration_test.rs  oauth_test.rs  oauth_unit_test.rs  password_flow_test.rs  rpc_permission_edge_cases_test.rs  tenant_isolation_test.rs  tenant_race_condition_test.rs
cluster-hashring/: Cargo.toml
cluster-hashring/src/: coordinator.rs  registry.rs
core/: Cargo.toml
core/src/: bunker_key.rs  config.rs  database.rs  hashring.rs  (+7 more)
docs/: DEPLOYMENT.md  PSEUDO_RELAY_PROPOSAL.md
examples/: keycast-test.html  oauth-test.html
keycast/: Cargo.toml
keycast-login/: README.md  package.json
pg-hashring/: Cargo.toml  README.md
pg-hashring/examples/: demo.rs
pg-hashring/src/: cluster_pool.rs  coordinator.rs  error.rs  lib.rs  registry.rs  ring.rs
pg-hashring/tests/: multiprocess.rs  pool_simulation.rs  pool_stress.rs  simulation.rs
scripts/: logs-watch.sh  reset-prod-db.sh  test-pool-modes.sh  view-logs.sh
signer/: Cargo.toml
web/: bun.lockb  package.json  vite.config.ts
(+95 files in other folders)
