[package]
name = "pg-hashring"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL-backed cluster membership with consistent hashing"

[features]
default = []
pool = ["rand"]

[dependencies]
rand = { version = "0.8", optional = true }
anchorhash = "0.2"
arc-swap = "1.7"
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
ctrlc = { version = "3.4", features = ["termination"] }
serial_test = "3.2"
serde_json = "1.0"

[[example]]
name = "demo"
required-features = ["pool"]

[[bin]]
name = "pool_node"
required-features = ["pool"]
